# bankshot-rs

./: .dockerignore  .env  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  flake.nix  getLLm.sh
langserve/: Dockerfile  local_langserve.py  requirements.txt
src/: lib.rs  main.rs
static/: style.css
templates/: Bill.html  auth.html  index.html
