[package]
name = "ctf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.3", features = ["json"] }
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = [
  "derive",
  "serde_derive",
  "alloc",
  "rc",
] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-sessions = { version = "0.12.2", features = ["signed"] }
tower-sessions-rusqlite-store = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
